# slideaway

./: .gitignore  CLAUDE.md  LICENSE  MODULE_CONTEXT.md  README.md  REFERENCES.md  module.json  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: notify-marketplace.yml
agents/: slide-coach.md  slide-designer.md  slide-extractor.md  slide-qa.md  slide-reviewer.md
commands/: slides.md
handbook/: engine-guide.md  getting-started.md  style-catalog.md
hooks/: hooks.json
hooks/scripts/: slide-lint-hook.sh  validate-pptx-hook.sh
skills/: presentation-design-styles.md
skills/presentation-design-styles/: SKILL.md
skills/presentation-visual-qa/: SKILL.md
skills/slide-generation/: SKILL.md
templates/beamer/: conference-template.tex  defense-template.tex  metropolis-template.tex  seminar-template.tex
templates/html/: deck-template.html  slide-agenda.html  slide-closing.html  slide-comparison.html  slide-content.html  slide-data.html  slide-deck.html  slide-image-left.html  slide-image-right.html  slide-quote.html  slide-section.html  slide-team.html  slide-template.html  slide-timeline.html  slide-title.html  slide-two-column.html
templates/marp/: .marprc.yml  academic.css  default.css
tests/: test_backward_compat.py
tools/: pdf_to_images.py  slide_factory.py  slide_linter.py  slides_to_pdf.py  thumbnail_grid.py  validate_brief.py  validate_pptx.py
tools/html2pptx/: __init__.py  converter.py  renderer.py
(+32 files in other folders)
